fixed overflow of mission carousel

--- a/client/src/Components/MissionCarousel/MissionCarousel.css
+++ b/client/src/Components/MissionCarousel/MissionCarousel.css
@@ -1,4 +1,5 @@
 .complete-mission-carousel {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   margin-top: 100px;
